fix: add z-index to .popup

--- a/components/form/form.module.scss
+++ b/components/form/form.module.scss
@@ -109,6 +109,7 @@
   right: 0;
   font-size: 32px;
   background: rgba($color: #000000, $alpha: 0.8);
+  z-index: 1000;
 }
 
 .popupContent {
